--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="projects">
             <h2>Projects</h2>
             <div class="projects">
-                <div class="project-card" id="project1-trigger">1P13 prjoect 1 - international airport challenge>
+                <div class="project-card" id="project1-trigger">1P13 prjoect 1 - international airport challenge
                     <img class="p1-profile" src="project1/cad3.jpg">
                 </div>
                 <div class="project-card" id="project2-trigger">Project 2</div>
