--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="project-modal" class="modal">
         <div class="modal-content">
           <span class="close-button" onclick="closeModal('project-modal')">&times;</span>
-          <h3> 1P13 prjoect 1 - international airport challenge </h3>
+          <h3> 1P13 project 1 - International Airport Challenge </h3>
 
           <div class="intro-container">
             <!-- Text on the left -->
