file name change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehan Mohammed's Porfollio</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -226,7 +226,7 @@
             </div>
         
    
-            
+
             <div class="intro-image-container">
                 <div>
                 <img class="intro-image" src="project1/introimage.jpg" alt="Intro Image">
