--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="about">
         <div>
-          <img src="/website-images/headshot.png" alt="Headshot" style="width: 16rem; height: 16rem; border-radius: 50%; object-fit: cover; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); border: 4px solid rgba(0, 128, 255, 0.2); margin-bottom: 1rem;">
+          <img src="website-images/headshot.png" alt="Headshot" style="width: 16rem; height: 16rem; border-radius: 50%; object-fit: cover; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); border: 4px solid rgba(0, 128, 255, 0.2); margin-bottom: 1rem;">
        
           <section class="about-me-section">
             <h2>About Me</h2>
